# text-search

./: README.org  text-search.cabal
src/: Main.hs
